--- a/config.yaml.example
+++ b/config.yaml.example
@@ -8,5 +8,7 @@
 # Note that if $XDG_CONFIG_HOME is not defined then $HOME/.config/ is
 # used instead.
 
-spotify-client-id: "123456789qwertyuiop"
-spotify-client-secret: "1234567890qwert"
+spotify-username: "myspotifyusername"
+spotify-client-id: "myspotifydev_clientid"
+spotify-client-secret: "myspotifydev_clientsecret"
+spotify-redirect-uri: "myspotifydev_redirecturi"
