--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ chardet==3.0.4
 idna==2.8
 PyYAML==5.1b3
 requests==2.21.0
-spotipy==2.4.4
+six==1.12.0
+git+git://github.com/plamere/spotipy.git@master # Spotipy
 urllib3==1.24.1
